<resources>
    <string name="app_name">Sarawak Tour Guide</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Dining</string>
    <string name="attractions">Sights</string>
    <string name="events">Events</string>
    <string name="description">Description</string>
    <string name="attraction_information">Attraction Information</string>
    <string name="scenery_in_sarawak">Scenery in Sarawak</string>
    <string name="image_of_the_place">image of the place</string>
    <string name="attraction_name_1">Bako National Park</string>
    <string name="attraction_name_2">Sarawak Cultural Village</string>
    <string name="attraction_name_3">Gunung Mulu National Park</string>
    <string name="attraction_name_4">Semenggoh Nature Reserve</string>
    <string name="attraction_name_5">Kuching Esplanade</string>
    <string name="attraction_name_6">The Brooke Gallery</string>
    <string name="attraction_address_1">Muara Tebas Peninsular\n93000, Kuching</string>
    <string name="attraction_address_2">Pantai Damai, Santubong\n93752 Kuching</string>
    <string name="attraction_address_3">Gunung Mulu National Park\nMiri</string>
    <string name="attraction_address_4">Jalan Tun Abang Haji Openg\n93000 Kuching</string>
    <string name="attraction_address_5">Jalan Main\nKuching 93000</string>
    <string name="attraction_address_6">Petra Jaya\n93050 Kuching</string>
    <string name="attraction_hour_1">8:00 AM - 5:00 PM</string>
    <string name="attraction_hour_2">9:00 AM - 5:00 PM</string>
    <string name="attraction_hour_3">8:00 AM - 5:00 PM</string>
    <string name="attraction_hour_4">8:00 AM - 5:00 PM</string>
    <string name="attraction_hour_5">All day</string>
    <string name="attraction_hour_6">9:00 AM - 4:45 PM</string>
    <string name="attraction_url_1">https://sarawakforestry.com/parks-and-reserves/bako-national-park/</string>
    <string name="attraction_url_2">https://www.scv.com.my/</string>
    <string name="attraction_url_3">https://mulupark.com/</string>
    <string name="attraction_url_4">https://sarawakforestry.com/parks-and-reserves/semenggoh-nature-reserve/</string>
    <string name="attraction_url_5">https://kuchingwaterfront.com/</string>
    <string name="attraction_url_6">https://www.brookegallery.org/</string>
    <string name="attraction_phone_1">+6082610088</string>
    <string name="attraction_phone_2">+6082846108</string>
    <string name="attraction_phone_3">+6085792300</string>
    <string name="attraction_phone_4">+6082618325</string>
    <string name="attraction_phone_5">-</string>
    <string name="attraction_phone_6">+60163101880</string>
    <string name="attraction_type_1">Nature and Park</string>
    <string name="attraction_type_2">Sights and Landmarks</string>
    <string name="attraction_type_3">Nature and Park</string>
    <string name="attraction_type_4">Nature and Park</string>
    <string name="attraction_type_5">Sights and Landmarks</string>
    <string name="attraction_type_6">Historical Site</string>
    <string name="attraction_description_1">A National Park since 1957, Bako offers the perfect introduction to Sarawak’s forests and wildlife.  The park covers the northern tip of the Muara Tebas peninsula, an area of 27 sq km. Bako is also home to approximately 275 rare proboscis monkeys, found only in Borneo. Bako’s plant life is both beautiful, and readily accessible.  All the trails have a great variety of vegetation, from mighty 80-metre dipterocarps to dense mangrove forest.  Carnivorous pitcher plants are found on the Lintang trail. Bako also has some good white sand beaches that provide perfect resting spots in between jungle treks.  Telok Pandan Kecil is perhaps Bako’s best beach. </string>
    <string name="attraction_description_2">Possibly the finest "Living Museum" in South East Asia, Sarawak Cultural Village combines history, tradition, lifestyle and architecture with a dash of education and portion of theatre to create a unique multi-cultural extravaganza. Seven unique traditional houses, spread over a beautiful 17-acre site, gives you the perfect introduction to Sarawak, its people and cultures, whether you are looking for insight into longhouse lifestyle or a taste of exuberant Sarawak hospitality, Sarawak Cultural Village is a must visit for visitors to Kuching and Damai.</string>
    <string name="attraction_description_3">Gunung Mulu National Park is a protected rainforest in Malaysian Borneo. It’s known for its dramatic peaks and caves, including the huge, bat-filled Deer Cave. The cave leads to the Garden of Eden, a hidden valley and waterfall enclosed by limestone cliffs. The Pinnacles at Gunung Api are tall, jagged limestone formations with steep trails and rare orchids. The summit of Gunung Mulu Mountain has views over the park.</string>
    <string name="attraction_description_4">For over 20 years, the wardens here trained young orangutans, who had been orphaned or rescued from captivity, how to survive in the wild. The success of this programme has left the surrounding forest reserve with a thriving population of healthy adolescent and young adult orang utans, who are now breeding in the wild. The programme has been transferred to Matang Wildlife Centre, but Semenggoh is still home to its successful graduates, semi-wild orang utans and their babies. They spend most of their time roaming the forest but frequently come back to the Centre for a free meal. If it is the fruiting season in the forest, some or even all of them may not come to feed. This in itself is a good sign and another step on the way to full rehabilitation.</string>
    <string name="attraction_description_5">Kuching Waterfront, which lines the south bank of Sarawak River, is THE place to sample the city’s cosmopolitan vibes. During the daytime, it offers scenic views of the Astana, Fort Margherita and the Malay kampungs across the river; but night-time is when it really comes alive! It seems like half of the city is out meeting friends, watching a show, or just shooting the breeze. For something different, why not try jetty-hopping along the river on the local Penambang boats, and savour the different sights, sounds (and delicacies!) between the two riverbanks.</string>
    <string name="attraction_description_6">The Brooke Gallery tells the story of one of the most remarkable kingdoms in history: Sarawak and its ‘White Rajahs’. In the 1830s Sarawak, a province of the once-mighty Sultanate of Brunei in north-west Borneo, was ravaged by piratical raiding and rebellion against Brunei rule. Inspired by stories of its natural wonders and diverse indigenous cultures, a bold English adventurer, James Brooke, arrived on its shores in his yacht, Royalist, in August 1839. He was to forge a unique bond with its peoples and together they built the foundations of today’s Sarawak. </string>
    <string name="attraction_short_desc_1">Protected coastal area with pristine beaches, cliffs and unusual rock formations.</string>
    <string name="attraction_short_desc_2">17-acre site exploring local ethnic groups via longhouse replicas, programs and cultural performances.</string>
    <string name="attraction_short_desc_3">Protected expanse of mountainous rainforest known for huge limestone caves and rock pinnacles.</string>
    <string name="attraction_short_desc_4">Nature reserve and primate rehabilitation center sheltering orangutans and many bird species.</string>
    <string name="attraction_short_desc_5">Bustling marketplace featuring traditional crafts, coffee shops and historical Chinese buildings</string>
    <string name="attraction_short_desc_6">Gallery in an 1800s English-style fort, with educational exhibits on Sarawak and its "White Rajahs."</string>
    <string name="attraction_fee_1">Adult : RM20\nChild : RM7</string>
    <string name="attraction_fee_2">Adult : RM50\nChild : RM25</string>
    <string name="attraction_fee_3">Adult :	RM30\nChild	: RM10 (7 – 18 years)\n6 and below :  free</string>
    <string name="attraction_fee_4">Adult : RM10\nChild : RM5</string>
    <string name="attraction_fee_5">Free</string>
    <string name="attraction_fee_6">RM20</string>
    <string name="restaurant_name_1">The Dyak</string>
    <string name="restaurant_name_2">Jambu Restaurant and Lounge</string>
    <string name="restaurant_name_3">Top Spot Food Court</string>
    <string name="restaurant_name_4">Balkanico Pizza</string>
    <string name="restaurant_name_5">Chong Choon Cafe</string>
    <string name="restaurant_name_6">My Little Kitchen</string>
    <string name="restaurant_address_1">Sublot 29, Panovel Commercial Complex\nJalan Simpang Tiga\nKampung Kenyalang Park\n 93300 Kuching</string>
    <string name="restaurant_address_2">No. 32, Jalan Crookshank\n93100 Kuching</string>
    <string name="restaurant_address_3">Jalan Padungan\n93100 Kuching</string>
    <string name="restaurant_address_4">Abell road\n93100 Kuching</string>
    <string name="restaurant_address_5">Abell road\n93100 Kuching</string>
    <string name="restaurant_address_6">38, Jalan Padungan\n93100 Kuching</string>
    <string name="restaurant_hour_1">12:00 PM - 8:30 PM\n(Mon - Sat)</string>
    <string name="restaurant_hour_2">6:00 PM - 11:00 PM\n(Tue - Sun)</string>
    <string name="restaurant_hour_3">5:00 PM - 11:00 PM</string>
    <string name="restaurant_hour_4">4:00 PM - 10:00 PM</string>
    <string name="restaurant_hour_5">6:30 AM - 11:45 PM</string>
    <string name="restaurant_hour_6">12:00 PM - 10:30 PM</string>
    <string name="restaurant_url_1">https://www.facebook.com/the.Dyak</string>
    <string name="restaurant_url_2">https://www.facebook.com/pages/Jambu-Restaurant-Lounge/230924696971786</string>
    <string name="restaurant_url_3">-</string>
    <string name="restaurant_url_4">https://www.facebook.com/Balkanico/</string>
    <string name="restaurant_url_5">https://www.facebook.com/Chong-Choon-Cafe-84608810186/</string>
    <string name="restaurant_url_6">https://www.facebook.com/MyLittleKitchen56/</string>
    <string name="restaurant_phone_1">+6082234068</string>
    <string name="restaurant_phone_2">+6082235292</string>
    <string name="restaurant_phone_3">+60128099522</string>
    <string name="restaurant_phone_4">+60168612855</string>
    <string name="restaurant_phone_5">+60128571811</string>
    <string name="restaurant_phone_6">+60168586669</string>
    <string name="restaurant_type_1">Dayak cuisine</string>
    <string name="restaurant_type_2">Gastropub, Bar, European</string>
    <string name="restaurant_type_3">Chinese, Seafood, Asian</string>
    <string name="restaurant_type_4">Pizza, Vegetarian Friendly</string>
    <string name="restaurant_type_5">Chinese, Cafe, Asian</string>
    <string name="restaurant_type_6">European, Swedish, Scandinavian</string>
    <string name="restaurant_description_1">The first venue in Borneo to take classic Dayak recipes, commonly seen as home-cooking or street food, and turn them into restaurant cuisine. Set in a beautiful, artifact-lined dining room, it offers one of the most complete culinary experiences in Kuching. Each dish can be sourced back to a local ethnic tradition.</string>
    <string name="restaurant_description_2">Several upscale restaurants in Kuching practice a fusion cuisine, cooking locally sourced ingredients with western techniques, but none do it as successfully as Jambu. Its building, a grandiose mansion, all tall ceilings and elegant low-lit lighting, was once the go-to place for glamorous colonial get-togethers.</string>
</resources>